--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -52,7 +52,9 @@
                     <div class="caja-cuerpo">
                         <img class="imagen_pelicula" src="{{ film.url_cover }}" alt="1917" width="320" height="400" class="mx-auto d-block">
                         <h3 id="titulo-film-lista"><strong>{{ film.name_film }}</strong> <small>({{ film.num_stars }}/5 &#x2605;)</small></h3>
-                        <button id="boton-film" class="btn btn-primary btn-block" href={% url 'film' "{{ film.name_film }}" %}></button>>Ver</button>
+                        <a href={% url 'film' film.name_film %}>
+                            <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
+                        </a>
                     </div>
                 </div>
                 {% endfor %}
