--- a/mysite/myapp/templates/myapp/film.html
+++ b/mysite/myapp/templates/myapp/film.html
@@ -30,7 +30,7 @@
                                 </a>                         
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir</a></li>
-                                <li><a class="dropdown-item" href={% url 'modify_user' %}>Borrar/Modificar</a></li>
+                                <li><a class="dropdown-item" href={% url 'modify_users' %}>Borrar/Modificar</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
