--- a/mysite/myapp/templates/myapp/logout.html
+++ b/mysite/myapp/templates/myapp/logout.html
@@ -17,7 +17,7 @@
 <body>
     
   
-    <p>Logged out!</p>
+    <p id ="logout">Logged out!</p>
     <a href={%url 'index' %}>Volver a la pagina de inicio</a>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
