--- a/mysite/myapp/templates/myapp/new_admin.html
+++ b/mysite/myapp/templates/myapp/new_admin.html
@@ -32,7 +32,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <li><Añadir class="dropdown-item" href={% url 'new_user' %}>Añadir usuario</a></li>
                                     <li><a class="dropdown-item" href={% url 'new_admin' %}>Añadir admin</a></li>
-                                    <li><a class="dropdown-item" href={% url 'modify_user' %}>Borrar/Modificar</a></li>
+                                    <li><a class="dropdown-item" href={% url 'modify_users' %}>Borrar/Modificar</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
