--- a/mysite/myapp/templates/myapp/modify_film.html
+++ b/mysite/myapp/templates/myapp/modify_film.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
+  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
@@ -52,51 +52,53 @@
         </div>
     </header>
     <section id="formulario_peliculas" class ="container">
+        {% for film in films %}
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Añadir pelicula</h5>
-                <form action = {% url 'add_film' %} method="post">
+                <h5 class="card-title">Modificar pelicula</h5>
+                <form action = {% url 'mod_film' film.name_film %} method="post">
                     {% csrf_token %}
                     <div class="form-group">
                       <label for="input">Nombre</label>
-                      <input type="text" class="form-control" id="name_film" name="name_film" placeholder="Nombre de la pelicula">
+                      <input type="text" class="form-control" id="name_film" name="name_film" value={{ film.name_film }} placeholder="Nombre de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="input">URL de la pelicula</label>
-                        <input type="url" class="form-control" id="url_film" name="url_film" placeholder="URL de la pelicula">
+                        <input type="url" class="form-control" id="url_film" name="url_film" value={{ film.url_film }} placeholder="URL de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="input">Descripcion</label>
-                        <input type="text" class="form-control" id="description" name="description" placeholder="Descripcion de la pelicula">
+                        <input type="text" class="form-control" id="description" name="description" value={{ film.description }} placeholder="Descripcion de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="input">Año</label>
-                        <input type="number" class="form-control" id="year" name="year" placeholder="Año de la pelicula">
+                        <input type="number" class="form-control" id="year" name="year"value={{ film.year }}  placeholder="Año de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="input">Director</label>
-                        <input type="text" class="form-control" id="director" name="director" placeholder="Director de la pelicula">
+                        <input type="text" class="form-control" id="director" name="director" value={{ film.director }} placeholder="Director de la pelicula">
                     </div>
                     <div class="form-group">
                         <label for="input">Reparto de actores</label>
-                        <input type="text" class="form-control" id="actors" name="actors" placeholder="Reparto de actores">
+                        <input type="text" class="form-control" id="actors" name="actors" value={{ film.actors }} placeholder="Reparto de actores">
                     </div>
                     <div class="form-group">
                         <label for="input">URL de la portada</label>
-                        <input type="url" class="form-control" id="url_cover" name="url_cover" placeholder="URL de la portada">
+                        <input type="url" class="form-control" id="url_cover" name="url_cover" value={{ film.url_cover }} placeholder="URL de la portada">
                     </div>
                     <div class="form-group">
                         <label for="input">Valoracion</label>
-                        <input type="number" class="form-control" id="num_stars" name="num_stars" placeholder="Valoracion de la pelicula" min="1" max="5">
+                        <input type="number" class="form-control" id="num_stars" name="num_stars" value={{ film.num_stars }} placeholder="Valoracion de la pelicula" min="1" max="5">
                     </div>
                     <div class="form-group">
                         <a href="">
-                            <button id="boton-inicio" type="submit" class="btn btn-primary">Añadir</button>
+                            <button id="boton-inicio" type="submit" class="btn btn-primary">Modificar</button>
                         </a>
                     </div>
                   </form>
             </div>
         </div>
+        {% endfor %}
     </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
