--- a/mysite/myapp/templates/myapp/modify_films.html
+++ b/mysite/myapp/templates/myapp/modify_films.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
+  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
@@ -51,51 +51,18 @@
             </nav>
         </div>
     </header>
-    <section id="formulario_peliculas" class ="container">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Añadir pelicula</h5>
-                <form action = {% url 'add_film' %} method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                      <label for="input">Nombre</label>
-                      <input type="text" class="form-control" id="name_film" name="name_film" placeholder="Nombre de la pelicula">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">URL de la pelicula</label>
-                        <input type="url" class="form-control" id="url_film" name="url_film" placeholder="URL de la pelicula">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">Descripcion</label>
-                        <input type="text" class="form-control" id="description" name="description" placeholder="Descripcion de la pelicula">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">Año</label>
-                        <input type="number" class="form-control" id="year" name="year" placeholder="Año de la pelicula">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">Director</label>
-                        <input type="text" class="form-control" id="director" name="director" placeholder="Director de la pelicula">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">Reparto de actores</label>
-                        <input type="text" class="form-control" id="actors" name="actors" placeholder="Reparto de actores">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">URL de la portada</label>
-                        <input type="url" class="form-control" id="url_cover" name="url_cover" placeholder="URL de la portada">
-                    </div>
-                    <div class="form-group">
-                        <label for="input">Valoracion</label>
-                        <input type="number" class="form-control" id="num_stars" name="num_stars" placeholder="Valoracion de la pelicula" min="1" max="5">
-                    </div>
-                    <div class="form-group">
-                        <a href="">
-                            <button id="boton-inicio" type="submit" class="btn btn-primary">Añadir</button>
-                        </a>
-                    </div>
-                  </form>
-            </div>
+    <section id="buscar_pelicula" class ="container">
+        <div action = {%url 'modify_films' %} method="get">
+            {% for film in films %}
+            <li>
+                Nombre: {{ film.name_film }},
+                Director: {{ film.director }},
+                Año: {{ film.year }}
+                <a href={% url 'mod_film' film.name_film %}>Modificar</a>
+                <a href={% url 'del_film' film.name_film %}>Eliminar</a>
+            </li>
+            {% endfor %}
+            
         </div>
     </section>
     
