--- a/mysite/myapp/templates/myapp/modify_user.html
+++ b/mysite/myapp/templates/myapp/modify_user.html
@@ -23,7 +23,15 @@
                         <ul class="navbar-nav mt-2 mt-md-0">
                             <li class="nav-item"><a class="nav-link" href={% url 'login_admin' %}>Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href={% url 'films' %}>Peliculas</a></li>
-                            <li class="nav-item"><a class="nav-link" href={% url 'new_film' %}>Añadir peliculas</a></li>
+                            <li class="dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
+                                    Acciones peliculas
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <li><a class="dropdown-item" href={% url 'new_film' %}>Añadir peliculas</a></li>
+                                    <li><a class="dropdown-item" href={% url 'modify_films' %}>Borrar/Modificar peliculas</a></li>
+                                    </ul>
+                            </li>
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
                                     Usuarios
@@ -43,13 +51,42 @@
             </nav>
         </div>
     </header>
-    <div class = "container">
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+    <section id="formulario_user" class ="container">
+        {% for u in user %}
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Modificar usuario/admin</h4>
+                    <form action = {%url 'mod_user' u.username %} method="post">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col" id="inicio-login">
+                                
+                                <div class="form-group">
+                                    <output id="campos-formulario">Nombre de usuario/admin:</output>
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="Introduce tu nombre de usuario" value={{ u.username }} required="true">
+                                </div>
+                                <div class="form-group">
+                                    <output id="campos-formulario">Contraseña:</output>
+                                    <input type="password" class="form-control" id="password" name ="password" placeholder="*********" required="true">
+                                </div>
+                                <div class="form-group">
+                                    <output id="campos-formulario">Email:</output>
+                                    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Introduce tu email" value={{ u.email }} required="true">
+                                </div>
+                                
+                                <div class="form-group">
+                                    <a href="">
+                                        <button id="boton-inicio" type="submit" class="btn btn-primary">Modificar</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>      
+                </div>
+            </div>
+            {% endfor %}
+        
+    </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
