--- a/mysite/myapp/templates/myapp/film_user.html
+++ b/mysite/myapp/templates/myapp/film_user.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
 <body>
-    
     <header class="header bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light ">
@@ -32,38 +31,57 @@
             </nav>
         </div>
     </header>
-    <section id="buscar_pelicula" class ="container">
-        <form>
-            <label for="nombre_pelicula">Introduce el nombre de la pelicula:</label>
-            <input type="text" id="nombre_pelicula" name="nombre_pelicula">
-            <input type="submit" value="Buscar">
-        </form>
-    </section>
-    <section id="peliculas_nuevas" class="mb-5">
-        <div class="container">
-            <h2>Añadidas esta semana</h2>
-        </div>
-        <div class="container">
-            <div class="cards">
-                <div id="caja" class="card">
-                    <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/1917.jpg' %}" alt="1917" width="160" height="200" class="mx-auto d-block">
-                        <h3>1917</h3>
-                        <p>Valoración: 4/5</p>
-                        <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
+    {% csrf_token %}
+    {% for film in films %}
+    <section id="pelicula" class ="container">
+        <div class="card">
+            <div id="pelicula-card" class="card-body container">
+                <div id ="pelicula-portada">
+                    <img src="{{ film.url_cover }}" alt="1917" width="340" height="425"  class="mx-auto d-block">
+                </div>
+                <div id="pelicula-titulo">
+                    <div id="pelicula-titulo-valoracion" class="container">
+                        <a>{{ film.name_film }}</a>
+                        </br>
+                        <a1>{{ film.num_stars }}/5 &#x2605;</a1>
                     </div>
                 </div>
-                <div id="caja" class="card">
-                    <div class="caja-cuerpo">
-                        <img class="imagen_pelicula" src="{%static 'myapp/img/soul.jpg' %}" alt="Soul" width="160" height="200" class="mx-auto d-block">
-                        <h3>Soul</h3>
-                        <p>Valoración: 3.9/5</p>
-                        <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
+                <div id="pelicula-play">
+                    <a href="javascript:abrir()">
+                        <button id="boton-play" type="submit" class="btn btn-primary mx-auto d-block">Play</button>
+                    </a>
+                </div>
+                <div id="pelicula-ficha">
+                    <div class="container">
+                        <p><b>Año lanzamiento: </b>{{ film.year }}</p>
+                        <p><b>Director: </b>{{ film.director }}</p>
+                        <p><b>Reparto: </b>{{ film.actors }}</p>
+                        <p><b>Sinopsis: </b>{{ film.description }}</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <div id="video" class="video">
+        <div id="cerrar" class container>
+            <a href="javascript:cerrar()"> <img src="img/x-mark.png" width="25" height="25"></a>
+        </div>
+        <div class="iframe-container">
+            <iframe width="1870" height="850" src="{{ film.url_film }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+    {% endfor %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script>
+        function abrir(){
+            document.getElementById("video").style.display="block";
+        }
+        function cerrar(){
+            document.getElementById("video").style.display="none";
+        }
+    </script>
+    
 </body>
 </html>
