buscador realizado en films

--- a/mysite/myapp/templates/myapp/film_user.html
+++ b/mysite/myapp/templates/myapp/film_user.html
@@ -68,7 +68,7 @@
             <a href="javascript:cerrar()"> <img src="img/x-mark.png" width="25" height="25"></a>
         </div>
         <div class="iframe-container">
-            <iframe width="1870" height="850" src="{{ film.url_film }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1870" height="850" src="{{ urlNew }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     {% endfor %}
