--- a/mysite/myapp/templates/myapp/films.html
+++ b/mysite/myapp/templates/myapp/films.html
@@ -34,9 +34,11 @@
     </header>
 
     <section id="buscar_pelicula" class ="container">
-        <form>
-            <input type="search" id="input_nombre_pelicula" name="nombre_pelicula" placeholder="Nombre película">
-            <button type="submit" id="boton_buscador_film"><i class="fa fa-search"></i></button>
+        <form action={% url 'search' %} method="GET">
+            <input type="search" id="input_nombre_pelicula" name="nombre_pelicula" placeholder="Buscar nombre película">
+            <!--a href={% url 'search' %}-->
+                <button type="submit" id="boton_buscador_film" class="btn btn-primary btn-block"><i class="fa fa-search"></i></button>
+            <!--/a-->
         </form>
     </section>
 
