--- a/mysite/myapp/static/myapp/style.css
+++ b/mysite/myapp/static/myapp/style.css
@@ -54,7 +54,7 @@ body, html {
     margin-top: 20px;
     width: 50%;
     color:white;
-    align-items: center;
+    text-align: center;
 }
 
 #input_nombre_pelicula{
