--- a/mysite/myapp/templates/myapp/login_admin.html
+++ b/mysite/myapp/templates/myapp/login_admin.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light ">
                 <div id="nav" class="container">
-                    <a class="navbar-brand" href="#">Videoclub</a>
+                    <a class="navbar-brand" href={% url 'login_admin' %}>Videoclub</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -44,7 +44,6 @@
                                 <li><a class="dropdown-item" href={% url 'modify_users' %}>Borrar/Modificar</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
                             <li class="nav-item"><a class="nav-link" href={% url 'get_logout' %}>Cerrar sesión</a></li>
                         </ul>
                     </div>
@@ -58,6 +57,28 @@
             <input type="search" id="input_nombre_pelicula" name="nombre_pelicula" placeholder="Buscar nombre película">
                 <button type="submit" id="boton_buscador_film" class="btn btn-primary btn-block"><i class="fa fa-search"></i></button>
         </form>
+    </section>
+
+    <section id="peliculas_nuevas" class="mb-5">
+        <div class="container">
+            <h2>Películas mejor valoradas</h2>
+        </div>
+        <div class="container">
+            <div class="cards" action = {% url 'films' %} method="get">
+                {% csrf_token %}
+                {% for film in films %}
+                <div id="caja" class="card">
+                    <div class="caja-cuerpo">
+                        <img class="imagen_pelicula" src="{{ film.url_cover }}" alt="1917" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>{{ film.name_film }}</strong> <small>({{ film.num_stars }}/5 &#x2605;)</small></h3>
+                        <a href={% url 'film' film.name_film %}>
+                            <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
+                        </a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
