--- a/mysite/myapp/templates/myapp/modify_user.html
+++ b/mysite/myapp/templates/myapp/modify_user.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light ">
                 <div id="nav" class="container">
-                    <a class="navbar-brand" href="#">Videoclub</a>
+                    <a class="navbar-brand" href={% url 'login_admin' %}>Videoclub</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -34,16 +34,15 @@
                             </li>
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="true">
-                                    Usuarios
+                                Usuarios
                                 </a>
-                                
+                            
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir usuario</a></li>
-                                    <li><a class="dropdown-item" href={% url 'new_admin' %}>Añadir admin</a></li>
-                                    <li><a class="dropdown-item" href={% url 'modify_users' %}>Borrar/Modificar</a></li>
+                                <li><a class="dropdown-item" href={% url 'new_user' %}>Añadir usuario</a></li>
+                                <li><a class="dropdown-item" href={% url 'new_admin' %}>Añadir admin</a></li>
+                                <li><a class="dropdown-item" href={% url 'modify_users' %}>Borrar/Modificar</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#">Ajustes</a></li>
                             <li class="nav-item"><a class="nav-link" href={% url 'get_logout' %}>Cerrar sesión</a></li>
                         </ul>
                     </div>
