--- a/mysite/myapp/templates/myapp/search_user.html
+++ b/mysite/myapp/templates/myapp/search_user.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/style.css' %}">
 </head>
 <body>
+    
     <header class="header bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light ">
@@ -30,57 +31,36 @@
             </nav>
         </div>
     </header>
-    {% csrf_token %}
-    {% for film in films %}
-    <section id="pelicula" class ="container">
-        <div class="card">
-            <div id="pelicula-card" class="card-body container">
-                <div id ="pelicula-portada">
-                    <img src="{{ film.url_cover }}" alt="1917" width="340" height="425"  class="mx-auto d-block">
-                </div>
-                <div id="pelicula-titulo">
-                    <div id="pelicula-titulo-valoracion" class="container">
-                        <a>{{ film.name_film }}</a>
-                        </br>
-                        <a1>{{ film.num_stars }}/5 &#x2605;</a1>
+
+    <section id="buscar_pelicula" class ="container">
+        <form action={% url 'search_user' %} method="GET">
+            <input type="search" id="input_nombre_pelicula" name="nombre_pelicula" placeholder="Buscar nombre película">
+            <button type="submit" id="boton_buscador_film"><i class="fa fa-search"></i></button>
+        </form>
+    </section>
+
+    <section id="peliculas_nuevas" class="mb-5">
+        <div class="container">
+            <h2>Búsqueda</h2>
+        </div>
+        <div class="container">
+            <div class="cards" action = {% url 'films_user' %} method="get">
+                {% csrf_token %}
+                {% for film in films %}
+                <div id="caja" class="card">
+                    <div class="caja-cuerpo">
+                        <img class="imagen_pelicula" src="{{ film.url_cover }}" alt="1917" width="320" height="400" class="mx-auto d-block">
+                        <h3 id="titulo-film-lista"><strong>{{ film.name_film }}</strong> <small>({{ film.num_stars }}/5 &#x2605;)</small></h3>
+                        <a href={% url 'film_user' film.name_film %}>
+                            <button id="boton-film" class="btn btn-primary btn-block">Ver</button>
+                        </a>
                     </div>
                 </div>
-                <div id="pelicula-play">
-                    <a href="javascript:abrir()">
-                        <button id="boton-play" type="submit" class="btn btn-primary mx-auto d-block">Play</button>
-                    </a>
-                </div>
-                <div id="pelicula-ficha">
-                    <div class="container">
-                        <p><b>Año lanzamiento: </b>{{ film.year }}</p>
-                        <p><b>Director: </b>{{ film.director }}</p>
-                        <p><b>Reparto: </b>{{ film.actors }}</p>
-                        <p><b>Sinopsis: </b>{{ film.description }}</p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </section>
 
-    <div id="video" class="video">
-        <div id="cerrar" class container>
-            <a href="javascript:cerrar()"><b>Close</b></a>
-        </div>
-        <div class="iframe-container">
-            <iframe width="1870" height="850" src="{{ urlNew }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </div>
-    {% endfor %}
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script>
-        function abrir(){
-            document.getElementById("video").style.display="block";
-        }
-        function cerrar(){
-            document.getElementById("video").style.display="none";
-        }
-    </script>
-    
 </body>
 </html>
